feat: 챌린지에 대한 북마크 여부를 반환하는 메서드 추가